[project]
name = "comfyui-q-find-mask-size"
description = "ComfyUI custom node for finding and analyzing mask sizes in images"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0"
]

[project.urls]
Repository = "https://github.com/angree/ComfyUI-Q_find-mask-size"

[tool.comfy]
PublisherId = "angree"  # Twój publisher ID z Registry
DisplayName = "Q Find Mask Size"

